few section addded

--- a/index.html
+++ b/index.html
@@ -35,9 +35,85 @@
         </div>
         <div class="about-text">
             <h1>About Me</h1>
-            <p>I believe independent restaurants occupy a distinctive position in the world of business. I am visible, important and integral parts of the communities for serve. Unlike our chain counterparts, people often have a personal connection to one or more of their home grown restaurants. Independents have a local identity and are often one of the most tangible representations of an area's heritage, history and unique character. </p>
+            <p>I believe independent restaurants occupy a distinctive <br> position in the world of business. I am visible, important <br> and integral parts of the communities for serve. Unlike  <br> our chain counterparts, people often have a personal <br> connection to one.</p>
             <a class="button" target="_blank" href="https://www.linkedin.com/feed/">Contact Me</a>
         </div>
     </section>
+    <section class="recipies">
+        <div class="contriner">
+            <div class="recipies-top">
+                <h1>My recipies</h1>
+                <p>Recipes are unlocked through leveling up. Recipes can be <br> purchased by Customers and are given a different amount of cash <br> depending on the food item when the customer's plate is collected.</p>
+            </div>
+            <div class="recipe-text">
+                <div class="recipe-details">
+                    <img src="images/Project Cover.png" alt="">
+                    <h3>Coconut Soup</h3>
+                    <p>This is my mum’s recipe and always the first to come to mind when I have a butternut squash.</p>
+                </div>
+                <div class="recipe-details">
+                    <img src="images/Project Cover.jpg" alt="">
+                    <h3>Oatmeal Breakfast</h3>
+                    <p>This recipe is based on my Extra Thick and Fudgy Brownies, but with an extra cup of flour.</p>
+                </div>
+                <div class="recipe-details">
+                    <img src="images/Project Cover1.jpg" alt="">
+                    <h3>Summer Party</h3>
+                    <p>There are few things better than a summer dinner party and few things worse than cooking for one.</p>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="follow">
+        <div class="contriner">
+            <div class="counter">
+                <div class="items">
+                    <h1>700K</h1>
+                    <span>Youtube Subscribers</span>
+                </div>
+                <div class="items">
+                    <h1>2.4m</h1>
+                    <span>Instagram Followers</span>
+                </div>
+                <div class="items">
+                    <h1>100K</h1>
+                    <span>Dribbble Shot Likes</span>
+                </div>
+            </div>
+        </div>
+    </section>
+    <section class="special">
+        <div class="container">
+            <h1>OUR RESTAURANTS FEW MORE FOOD</h1>
+            <div class="box">
+                <div class="special-item">
+                    <img src="images/Project Cover5.png" alt="">
+                    <h3>Healthy Salad Toppings</h3>
+                </div>
+                <div class="special-item">
+                    <img src="images/Project Cover7.png" alt="">
+                    <h3>Healthy Recipe</h3>
+                </div>
+                <div class="special-item">
+                    <img src="images/Project Cover8.png" alt="">
+                    <h3>Healthy Food</h3>
+                </div>
+            </div>
+            <a class="button" href="#">See More</a>
+        </div>
+    </section>
+    <section class="sweet-food">
+        <div class="food-image">
+            <img src="images/especial-food.jpg" alt="">
+        </div>
+        <div class="food-text">
+            <h1>Our Restaurant <br> Especial Fruit Items</h1>
+            <p>This creamy fruit salad recipe, using Greek yogurt, is sweet and creamy without the added calories!  In Grill-9 Restaurant every item is awesome. </p>
+        </div>
+    </section>
+    <footer>
+        <h1><span>FOOD</span> NETWORK</h1>
+        <p>Eat healthy to live healthy. Live healthy to live happy.</p>
+    </footer>
 </body>
 </html>
